Closed Bug 468255 Opened 16 years ago Closed 15 years ago

Pressing Esc when editing in the location bar containing unescaped UTF-8 restores escaped view

Categories

(Camino Graveyard :: Location Bar & Autocomplete, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: alqahira, Assigned: chris)

References

()

Details

Attachments

(1 file)

STR:

1) Open http://hi.wikipedia.org/wiki/मुखपृष्ठ
2) Cmd-L to get back in the location bar
3) Start typing to go somewhere else
4) Change your mind; hit Esc

AR: Big long escaped URL
ER: The same unescaped URL you saw in step 1

Technically you don't even have to be editing; it's enough to simply press Esc in step 2.
Hardware: Macintosh → All
Attached patch Fix v1.0Splinter Review
Just a simple unescapedURI call added.
Assignee: nobody → trendyhendy2000
Attachment #358524 - Flags: superreview?(stuart.morgan+bugzilla)
Comment on attachment 358524 [details] [diff] [review]
Fix v1.0

sr=smorgan
Attachment #358524 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Landed on cvs trunk.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: