Bug 468255 - Pressing Esc when editing in the location bar containing unescaped UTF-8 restores escaped view. Patch by Christopher Henderson <trendyhendy2000@gmail.com>, r/sr=smorgan